finished todos, data is populating on db in postgres

--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -4,12 +4,28 @@
   "description": "As we now complete our MVC conversation, we can refactor our app to use good MVC separation of concerns.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Code Fellows",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.13.3",
-    "body-parser": "^1.17.1"
-  }
+    "pg": "^7.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zaj6827/08-sql-and-postgres.git"
+  },
+  "keywords": [
+    "cf",
+    "301",
+    "08",
+    "lab"
+  ],
+  "bugs": {
+    "url": "https://github.com/zaj6827/08-sql-and-postgres/issues"
+  },
+  "homepage": "https://github.com/zaj6827/08-sql-and-postgres#readme"
 }
